--- a/web/index.html
+++ b/web/index.html
@@ -10,7 +10,7 @@
 
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="fomet_app">
+  <meta name="apple-mobile-web-app-title" content="FometApp">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <link rel="icon" type="image/png" href="favicon.png" />
@@ -28,7 +28,6 @@
 
 <body>
   <img src="images/logo.svg" alt="Logo" />
-  <div id="loading" class="status"> </div>
   <div class="loading_spinner"></div>
 
   <script>
