--- a/web/index.html
+++ b/web/index.html
@@ -24,6 +24,7 @@
   </script>
 
   <script src="flutter.js" defer></script>
+  <script src="https://unpkg.com/@zxing/library@0.19.1" type="application/javascript"></script>
 </head>
 
 <body>
