chore: project build targets chores

--- a/web/index.html
+++ b/web/index.html
@@ -24,6 +24,8 @@
   </script>
 
   <script src="flutter.js" defer></script>
+
+  <!-- This is needed by the mobile_scanner package to recognize QR codes using the camera -->
   <script src="https://unpkg.com/@zxing/library@0.19.1" type="application/javascript"></script>
 </head>
 
